# bot-tester

./: CMakeLists.txt  Full_game_log.txt  Quoridor.cpp  Quoridor.hpp  clear.sh  main.cpp  rules.md  script1.sh  script2.sh
Interactor/: Interactor.cpp  Interactor.h
bot_samples/: always_go_forward.cpp  bot_petr0w1tch.cpp  go_forward_one_or_two_steps.cpp  set_one_partition.cpp  use_bfs_and_go.cpp
client/: CMakeLists.txt  Client.cpp  Client.h  client.cpp  main.cpp  testServer.cpp  testServer.hpp
game/: Quoridor.cpp  Quoridor.hpp  TestGame.cpp  TestGame.h
logs/: errorLog_5030_5031.txt
players/: names.txt  talking_log.txt
players/echo5/: CMakeLists.txt  main.cpp
players/team_1/: CMakeLists.txt  bot_old (2).cpp  team_1
players/team_2/: CMakeLists.txt  bot_battle.cpp  main.cpp  team_2
players/team_3/: game.py  main.py
players/team_4/: CMakeLists.txt  main.cpp  solution.cpp  team_4
players/team_5/: bot_battle.cpp  team_5
players/team_6/: main.cpp  team_6
players/untitled/: main.cpp  script1.sh
players/untitled1/: main.cpp
players/untitled3/: main.cpp
server/: Server.cpp  Server.hpp
tests/: quoridor_tests.cpp
tournament/: tournament.cpp  tournament.h
